--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="header logo">
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" target="_blank" class="header__link">Узнать</a>
+      </p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="header main illustration">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
