--- a/index.html
+++ b/index.html
@@ -134,7 +134,37 @@
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="footer logo">
+          <p class="footer__author">&copy; 2021. Сергей Фоменко</p>
+        </div>
+        <div class="footer__column_content_info">
+          <h5 class="footer__column-heading">О Практикуме</h5>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column_content_social">
+          <h5 class="footer__column-heading">Соцсети</h5>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link">
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook icon">
+              Facebook
+            </a>
+            <a href="#" class="footer__column-link">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте icon">
+              ВКонтакте
+            </a>
+            <a href="#" class="footer__column-link">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram icon">
+              Instagram
+            </a>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
