--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" target="_blank" class="header__link">Узнать</a>
+        <a class="header__link" href="#" target="_blank">Узнать</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="header main illustration">
       <div class="header__square-pic"></div>
@@ -82,7 +82,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее</a>
+        <a class="feynman__link" href="#" target="_blank">Подробнее</a>
       </section>
 
       <section class="kaufman">
@@ -142,23 +142,23 @@
         <div class="footer__column_content_info">
           <h5 class="footer__column-heading">О Практикуме</h5>
           <div class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
+            <a class="footer__column-link" href="#" target="_blank">Главная</a>
+            <a class="footer__column-link" href="#" target="_blank">Концепция</a>
+            <a class="footer__column-link" href="#" target="_blank">Наставники</a>
           </div>
         </div>
         <div class="footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
           <div class="footer__column-links">
-            <a href="#" class="footer__column-link">
+            <a class="footer__column-link" href="#" target="_blank">
               <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook icon">
               Facebook
             </a>
-            <a href="#" class="footer__column-link">
+            <a class="footer__column-link" href="#" target="_blank">
               <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте icon">
               ВКонтакте
             </a>
-            <a href="#" class="footer__column-link">
+            <a class="footer__column-link" href="#" target="_blank">
               <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram icon">
               Instagram
             </a>
