--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="header logo">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#" target="_blank">Узнать</a>
       </p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="header main illustration">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="картина 'Опять двойка'">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -130,13 +130,13 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Kaufman triangle">
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
-          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="footer logo">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="логотип Яндекс Практикум">
           <p class="footer__author">&copy; 2021. Сергей Фоменко</p>
         </div>
         <div class="footer__column_content_info">
@@ -151,15 +151,15 @@
           <h5 class="footer__column-heading">Соцсети</h5>
           <div class="footer__column-links">
             <a class="footer__column-link" href="#" target="_blank">
-              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook icon">
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="значок Facebook">
               Facebook
             </a>
             <a class="footer__column-link" href="#" target="_blank">
-              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте icon">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="значок ВКонтакте">
               ВКонтакте
             </a>
             <a class="footer__column-link" href="#" target="_blank">
-              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram icon">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="значок Instagram">
               Instagram
             </a>
           </div>
