--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -35,7 +35,7 @@
               Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="digits">
@@ -130,40 +130,52 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__columns_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="логотип Яндекс Практикум">
           <p class="footer__author">&copy; 2021. Сергей Фоменко</p>
         </div>
-        <div class="footer__column_content_info">
+        <nav class="footer__columns_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <div class="footer__column-links">
-            <a class="footer__column-link" href="#" target="_blank">Главная</a>
-            <a class="footer__column-link" href="#" target="_blank">Концепция</a>
-            <a class="footer__column-link" href="#" target="_blank">Наставники</a>
-          </div>
-        </div>
-        <div class="footer__column_content_social">
+          <ul class="footer__column-links">
+            <li>
+              <a class="footer__column-link" href="#" target="_blank">Главная</a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="#" target="_blank">Концепция</a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="#" target="_blank">Наставники</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="footer__columns_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__column-links">
-            <a class="footer__column-link" href="#" target="_blank">
-              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="значок Facebook">
-              Facebook
-            </a>
-            <a class="footer__column-link" href="#" target="_blank">
-              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="значок ВКонтакте">
-              ВКонтакте
-            </a>
-            <a class="footer__column-link" href="#" target="_blank">
-              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="значок Instagram">
-              Instagram
-            </a>
-          </div>
-        </div>
+          <ul class="footer__column-links">
+            <li>
+              <a class="footer__column-link" href="#" target="_blank">
+                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="значок Facebook">
+                Facebook
+              </a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="#" target="_blank">
+                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="значок ВКонтакте">
+                ВКонтакте
+              </a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="#" target="_blank">
+                <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="значок Instagram">
+                Instagram
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </footer>
   </div>
