fix code review comments

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="логотип Яндекс Практикум">
           <p class="footer__author">&copy; 2021. Сергей Фоменко</p>
         </div>
-        <nav class="footer__columns_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li>
@@ -153,7 +153,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="footer__columns_content_social">
+        <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li>
