--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="header__link" href="#" target="_blank">Узнать</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="картина 'Опять двойка'">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
