--- a/index.html
+++ b/index.html
@@ -137,6 +137,20 @@
         </ul>
       </section>
 
+      <section class="khan">
+        <div class="khan__container">
+          <h2 class="khan__author">Салман Хан</h2>
+          <h3 class="khan__title">Весь мир — школа</h3>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Весь мир — школа">
+            <a class="khan__buy-link" href="#" target="_blank">Купить книгу</a>
+          </div>
+        </div>
+      </section>
+
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
