--- a/index.html
+++ b/index.html
@@ -198,6 +198,33 @@
         </ul>
         <div class="kaufman__triangle rotation"></div>
       </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li>
+            <a class="resources__logo" href="#" target="_blank">
+              <img src="./images/resources-arzamas.svg" alt="">
+            </a>
+          </li>
+          <li>
+            <a class="resources__logo" href="#" target="_blank">
+              <img src="./images/resources-n1.svg" alt="">
+            </a>
+          </li>
+          <li>
+            <a class="resources__logo" href="#" target="_blank">
+              <img src="./images/resources-strelka.svg" alt="">
+            </a>
+          </li>
+          <li>
+            <a class="resources__logo" href="#" target="_blank">
+              <img src="./images/resources-polka.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
