--- a/index.html
+++ b/index.html
@@ -204,22 +204,22 @@
         <ul class="resources__logo-zone">
           <li>
             <a class="resources__logo" href="#" target="_blank">
-              <img src="./images/resources-arzamas.svg" alt="">
+              <img src="./images/resources-arzamas.svg" alt="значок Arzamas">
             </a>
           </li>
           <li>
             <a class="resources__logo" href="#" target="_blank">
-              <img src="./images/resources-n1.svg" alt="">
+              <img src="./images/resources-n1.svg" alt="значок N+1">
             </a>
           </li>
           <li>
             <a class="resources__logo" href="#" target="_blank">
-              <img src="./images/resources-strelka.svg" alt="">
+              <img src="./images/resources-strelka.svg" alt="значок STRELKA">
             </a>
           </li>
           <li>
             <a class="resources__logo" href="#" target="_blank">
-              <img src="./images/resources-polka.svg" alt="">
+              <img src="./images/resources-polka.svg" alt="значок ПОЛКА">
             </a>
           </li>
         </ul>
