--- a/index.html
+++ b/index.html
@@ -40,42 +40,42 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <section class="cards">
-          <div class="cards__item">
+        <ul class="cards">
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="карточка 'Внимание'">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="карточка 'Recall'">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="карточка 'Интерливинг'">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="карточка 'Вопросы'">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="карточка 'Компетентность'">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          </div>
-        </section>
+          </li>
+        </ul>
       </section>
 
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <section class="video__iframes">
+        <div class="video__iframes">
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-        </section>
+        </div>
       </section>
 
       <section class="oakley">
@@ -138,9 +138,9 @@
 
       <section class="khan">
         <div class="khan__container">
-          <h2 class="khan__author">Салман Хан</h2>
-          <h3 class="khan__title">Весь мир — школа</h3>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -203,23 +203,23 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
           <li>
-            <a class="resources__logo" href="#" target="_blank">
-              <img src="./images/resources-arzamas.svg" alt="значок Arzamas">
+            <a href="#" target="_blank">
+              <img class="resources__logo" src="./images/resources-arzamas.svg" alt="значок Arzamas">
             </a>
           </li>
           <li>
-            <a class="resources__logo" href="#" target="_blank">
-              <img src="./images/resources-n1.svg" alt="значок N+1">
+            <a href="#" target="_blank">
+              <img class="resources__logo" src="./images/resources-n1.svg" alt="значок N+1">
             </a>
           </li>
           <li>
-            <a class="resources__logo" href="#" target="_blank">
-              <img src="./images/resources-strelka.svg" alt="значок STRELKA">
+            <a href="#" target="_blank">
+              <img class="resources__logo" src="./images/resources-strelka.svg" alt="значок STRELKA">
             </a>
           </li>
           <li>
-            <a class="resources__logo" href="#" target="_blank">
-              <img src="./images/resources-polka.svg" alt="значок ПОЛКА">
+            <a href="#" target="_blank">
+              <img class="resources__logo" src="./images/resources-polka.svg" alt="значок ПОЛКА">
             </a>
           </li>
         </ul>
